@@ -2,3 +2,5 @@ plugins/postr/postr.eog-plugin.desktop.in
 plugins/postr/eog-postr-plugin.c
 plugins/reload/reload.eog-plugin.desktop.in
 plugins/reload/eog-reload-plugin.c
+plugins/fullscreen/fullscreen.eog-plugin.desktop.in
+plugins/fullscreen/eog-fullscreen-plugin.c
